--- a/WebScrapping Algorithm.ipynb
+++ b/WebScrapping Algorithm.ipynb
@@ -11,12 +11,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# TAREAS.\n",
+    "\n",
+    "1. Que funcione a la perfección la extracción de información. => Crear un nuevo nodo en la red inicializado el objeto Nodo.\n",
+    "2. El algoritmo sepa bien cuando deter una búsqueda. \n",
+    "3. Googlear direcciones, números de teléfono y nombres de personas.\n",
+    "4. El webscrapping debe tener una memoria: específicamente, cuál fue la última página en la que estuvo!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# WebScrapping Algorithm."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +36,7 @@
     "import urllib.request, urllib.parse, urllib.error\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "from langdetect import detect\n",
     "\n",
     "# Numerical libraries.\n",
     "import pandas as pd\n",
@@ -39,6 +52,24 @@
     "\n",
     "# Regular expression.\n",
     "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_urls_recorridas = list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langdetect import detect"
    ]
   },
   {
@@ -88,22 +119,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nDental Gómez - Depósito Dental\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nContact\\n\\n\\nMeet us\\n\\n\\n\\n305-827-0682\\n\\n\\nventas@dentalgomez.co\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nInicio\\n\\n\\n\\n\\nTienda\\n\\n\\n\\n\\nSoporte en vivo\\n\\n\\n\\n\\nContáctenos\\n\\n\\n \\n\\n\\n                    Mi Carrito \\n\\n\\n\\n\\n\\nIdentificarse\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nNuestras \\n\\nPromociones\\n\\n \\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nAgrega al carrito\\nAgrega los productos que desees.\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nDatos de envío\\nIndícanos dónde quieres recibir tu pedido.\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nPago\\nMúltiples facilidades de pago.\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nRecibe los Productos\\nEn tu consultorio, sin costo adicional.\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nMateriales\\nOfrecemos una amplia gama de materiales dentales.\\n\\nTienda\\n\\n\\n\\n\\n\\n\\n\\n\\nInstrumental\\nDistribuimos instrumentales odontológicos para todas las especialidades.\\n\\nTienda\\n\\n\\n\\n\\n\\n\\n\\n\\nEquipos\\nContamos con una gran variedad de equipos dentales para todas las especialidades.\\n\\nContáctanos\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nCompra Online\\nGran variedad de productos desde la comodidad de tu consultorio, con\\xa0 grandes ofertas exclusivas.\\xa0\\n\\n\\n\\n\\n\\n\\n\\nRecibe en tu Consultorio\\nContamos con una gran\\xa0 disponibilidad para nuestras entregas llevándolo puntualmente\\xa0 a tu consultorio sin ningún costo adicional,\\n\\n\\n\\n\\n\\n\\n\\nAhorra Tiempo\\nEliminamos\\xa0 la necesidad de trasladarse, al mejor costo y con una atención personalizada y detallada de nuestros productos.\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nContáctanos\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nWhatsApp\\nChatea con nosotros.\\n\\n\\n\\n\\n\\n\\n\\nFacebook\\nÚnete a nuestra comunidad.\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nInstagram\\nMantente al tanto de nuestras promociones.\\n\\n\\n\\n\\n\\n\\n\\nCorreo\\nContáctate con servicio al cliente.\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nNuestros productos y Servicios\\n\\n\\nInicio\\n\\n\\n\\n\\nConéctate con nosotros\\n\\n\\nContáctenos\\n\\n\\n\\n305-827-0682\\n\\n\\n\\nventas@dentalgomez.co\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nDental Gomez\\n - Sobre Nosotros\\n\\n\\xa0Somos una empresa dedicada a la comercialización de materiales, equipos e instrumentos odontologicos, con los mas altos estándares de calidad a un buen\\xa0 costo.\\xa0 caracterizandonos por ser un equipo con una excelente calidad humana, comprometidos con nuestra labor contando con disponibilidad todos los días.\\xa0\\n\\n\\n\\n\\n\\n\\n\\n\\n\\nCopyright © Dental Gomez\\n\\n\\n\\n\\n\\n\\n            \\n        \\n        \\n        Con tecnología de \\n            \\n\\n\\n        - \\n                    El #1 Comercio electrónico de código abierto\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n'"
+       "'                  Dental Gómez - Depósito Dental                       Contact   Meet us    305-827-0682   ventas@dentalgomez.co                           Inicio     Tienda     Soporte en vivo     Contáctenos                           Mi Carrito       Identificarse                   Nuestras   Promociones                                                     Agrega al carrito Agrega los productos que desees.            Datos de envío Indícanos dónde quieres recibir tu pedido.          Pago Múltiples facilidades de pago.            Recibe los Productos En tu consultorio, sin costo adicional.             Materiales Ofrecemos una amplia gama de materiales dentales.  Tienda         Instrumental Distribuimos instrumentales odontológicos para todas las especialidades.  Tienda         Equipos Contamos con una gran variedad de equipos dentales para todas las especialidades.  Contáctanos             Compra Online Gran variedad de productos desde la comodidad de tu consultorio, con\\xa0 grandes ofertas exclusivas.\\xa0        Recibe en tu Consultorio Contamos con una gran\\xa0 disponibilidad para nuestras entregas llevándolo puntualmente\\xa0 a tu consultorio sin ningún costo adicional,        Ahorra Tiempo Eliminamos\\xa0 la necesidad de trasladarse, al mejor costo y con una atención personalizada y detallada de nuestros productos.           Contáctanos               WhatsApp Chatea con nosotros.        Facebook Únete a nuestra comunidad.            Instagram Mantente al tanto de nuestras promociones.        Correo Contáctate con servicio al cliente.                                        Nuestros productos y Servicios   Inicio     Conéctate con nosotros   Contáctenos    305-827-0682    ventas@dentalgomez.co              Dental Gomez  - Sobre Nosotros  \\xa0Somos una empresa dedicada a la comercialización de materiales, equipos e instrumentos odontologicos, con los mas altos estándares de calidad a un buen\\xa0 costo.\\xa0 caracterizandonos por ser un equipo con una excelente calidad humana, comprometidos con nuestra labor contando con disponibilidad todos los días.\\xa0          Copyright © Dental Gomez                                              Con tecnología de                         -                      El #1 Comercio electrónico de código abierto           '"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "soup.text"
+    "text = soup.get_text().replace(\"\\n\", \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(\"[0-9]^3-[0-9]^3-[0-9]^4\", text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dental Gómez - Depósito Dental\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Título de la página.\n",
+    "result = soup.find('title')\n",
+    "print(result.get_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'es'"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Idioma de la página.\n",
+    "detect(text)"
    ]
   },
   {
@@ -111,35 +209,87 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "self.ID = ID                (SHA256, \"http://titulopagina.com\")\n",
+    "self.url = url              (http://titulopagina.com/mensajes/)\n",
+    "self.urls=urls           => LISTA DE URLS\n",
+    "self.social_networks=social_networks   => (urls) => (facebook, twitter, instagram, ....)\n",
+    "\n",
+    "self.language = language\n",
+    "self.text= text                         => soup.get_text() => Muy bien formateado el texto.\n",
+    "self.names = names          [juan pablo] => SPACY\n",
+    "self.locations=locations => SPACY (BUSCAR SI SPACY SACA DIRECCIONES!!!)\n",
+    "\n",
+    "self.coordinates = None  => BUSCAR COMO EXTRAER LAS COORDENADAS! (MAPA)\n",
+    "self.organizations=organizations => ORG.\n",
+    "self.dates=dates         => Spacy pueda reconocer dates?? BUSCAR URGENTE.\n",
+    "\n",
+    "self.numbers=numbers     => Numeros detectados (AGREGAR UN PATRÓN EN SPACY, +57300985249, 300-898-8849, +57-953-849-8498) \n",
+    "                            phonenumbers (https://pypi.org/project/phonenumbers/)\n",
+    "self.images=images       => JP ya sabe como descargar imágenes de una página. <img> => Determinar las carpetas: Deep Web, Google Normal, Desaparecidos Fiscalia.\n",
+    "self.payment_accounts=payment_accounts => PATRÓN EN SPACY BILLETERA CRIPTOMONEDAS.\n",
+    "self.emails=emails                     => Emails. Buscar cómo se hace en Spacy ó hacer un Patrón con el @ mailto:ventas@dentalgomez.co\n",
+    "\"\"\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/\n",
+      "/contactus\n",
+      "/contactus\n",
+      "mailto:ventas@dentalgomez.co\n",
+      "https://www.facebook.com/dentalgomez.co\n",
+      "https://www.instagram.com/dentalgomez.co/\n",
+      "/\n",
+      "/\n",
+      "/shop\n",
+      "/livechat\n",
+      "/contactus\n",
+      "/shop/cart\n",
+      "/web/login\n",
+      "/shop\n",
+      "/shop\n",
+      "https://api.whatsapp.com/send?phone=573058270682&text=%C2%A1Hola!%20Me%20gustar%C3%ADa%20cotizar%20un%20equipo%20con%20Dental%20G%C3%B3mez.\n",
+      "https://api.whatsapp.com/send?phone=573058270682&text=%C2%A1Hola!%20Me%20gustar%C3%ADa%20contactarme%20con%20Dental%20G%C3%B3mez.\n",
+      "https://www.facebook.com/dentalgomez.co\n",
+      "https://www.instagram.com/dentalgomez.co/\n",
+      "mailto:ventas@dentalgomez.co?subject=Contacto%20con%20Dental%20Gomez&body=%C2%A1Hola!%20Deseo%20averiguar%20informaci%C3%B3n%20sobre\n",
+      "/\n",
+      "/contactus\n",
+      "https://www.facebook.com/dentalgomez.co\n",
+      "https://www.instagram.com/dentalgomez.co/\n",
+      "/aboutus\n",
+      "http://www.odoo.com?utm_source=db&utm_medium=sitio web\n",
+      "http://www.odoo.com/page/e-commerce?utm_source=db&utm_medium=website\n"
+     ]
+    }
+   ],
+   "source": [
+    "for etiqueta in soup.find_all(\"a\"): \n",
+    "    if etiqueta.attrs[\"href\"].find(\"#\") == -1: \n",
+    "        print(etiqueta.attrs[\"href\"])\n",
+    "    "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Criterios de parada.\n",
+    "\n",
+    "* Revisar descripción de la página. \n",
+    "* Revisar palabras clave de la página.\n",
+    "\n",
+    "- Definir palabras clave del algoritmo para detenerse!"
+   ]
   },
   {
    "cell_type": "code",
