--- a/WebScrapping Algorithm.ipynb
+++ b/WebScrapping Algorithm.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "'Dental Gómez - Depósito Dental'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,27 +126,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'                  Dental Gómez - Depósito Dental                       Contact   Meet us    305-827-0682   ventas@dentalgomez.co                           Inicio     Tienda     Soporte en vivo     Contáctenos                           Mi Carrito       Identificarse                   Nuestras   Promociones                                                     Agrega al carrito Agrega los productos que desees.            Datos de envío Indícanos dónde quieres recibir tu pedido.          Pago Múltiples facilidades de pago.            Recibe los Productos En tu consultorio, sin costo adicional.             Materiales Ofrecemos una amplia gama de materiales dentales.  Tienda         Instrumental Distribuimos instrumentales odontológicos para todas las especialidades.  Tienda         Equipos Contamos con una gran variedad de equipos dentales para todas las especialidades.  Contáctanos             Compra Online Gran variedad de productos desde la comodidad de tu consultorio, con\\xa0 grandes ofertas exclusivas.\\xa0        Recibe en tu Consultorio Contamos con una gran\\xa0 disponibilidad para nuestras entregas llevándolo puntualmente\\xa0 a tu consultorio sin ningún costo adicional,        Ahorra Tiempo Eliminamos\\xa0 la necesidad de trasladarse, al mejor costo y con una atención personalizada y detallada de nuestros productos.           Contáctanos               WhatsApp Chatea con nosotros.        Facebook Únete a nuestra comunidad.            Instagram Mantente al tanto de nuestras promociones.        Correo Contáctate con servicio al cliente.                                        Nuestros productos y Servicios   Inicio     Conéctate con nosotros   Contáctenos    305-827-0682    ventas@dentalgomez.co              Dental Gomez  - Sobre Nosotros  \\xa0Somos una empresa dedicada a la comercialización de materiales, equipos e instrumentos odontologicos, con los mas altos estándares de calidad a un buen\\xa0 costo.\\xa0 caracterizandonos por ser un equipo con una excelente calidad humana, comprometidos con nuestra labor contando con disponibilidad todos los días.\\xa0          Copyright © Dental Gomez                                              Con tecnología de                         -                      El #1 Comercio electrónico de código abierto           '"
+       "'                  Dental Gómez - Depósito Dental                         var odoo = {                         csrf_token: \"9c5cc6cebb6db91256eeaba620ab3ba83d1e9c7co\",                         debug: \"\",                     };                                   odoo.session_info = {\"is_admin\": false, \"is_system\": false, \"is_website_user\": true, \"user_id\": false, \"is_frontend\": true, \"translationURL\": \"/website/translations\", \"cache_hashes\": {\"translations\": \"f2d389bbaba89bd8398471121e6d8ae5d574f36b\"}};                               Contact   Meet us    305-827-0682   ventas@dentalgomez.co                           Inicio     Tienda     Soporte en vivo     Contáctenos                           Mi Carrito       Identificarse                   Nuestras   Promociones                                                     Agrega al carrito Agrega los productos que desees.            Datos de envío Indícanos dónde quieres recibir tu pedido.          Pago Múltiples facilidades de pago.            Recibe los Productos En tu consultorio, sin costo adicional.             Materiales Ofrecemos una amplia gama de materiales dentales.  Tienda         Instrumental Distribuimos instrumentales odontológicos para todas las especialidades.  Tienda         Equipos Contamos con una gran variedad de equipos dentales para todas las especialidades.  Contáctanos             Compra Online Gran variedad de productos desde la comodidad de tu consultorio, con\\xa0 grandes ofertas exclusivas.\\xa0        Recibe en tu Consultorio Contamos con una gran\\xa0 disponibilidad para nuestras entregas llevándolo puntualmente\\xa0 a tu consultorio sin ningún costo adicional,        Ahorra Tiempo Eliminamos\\xa0 la necesidad de trasladarse, al mejor costo y con una atención personalizada y detallada de nuestros productos.           Contáctanos               WhatsApp Chatea con nosotros.        Facebook Únete a nuestra comunidad.            Instagram Mantente al tanto de nuestras promociones.        Correo Contáctate con servicio al cliente.                                        Nuestros productos y Servicios   Inicio     Conéctate con nosotros   Contáctenos    305-827-0682    ventas@dentalgomez.co              Dental Gomez  - Sobre Nosotros  Somos una empresa dedicada a la comercialización de materiales, equipos e instrumentos odontologicos, con los mas altos estándares de calidad a un buen\\xa0 costo.\\xa0 caracterizandonos por ser un equipo con una excelente calidad humana, comprometidos con nuestra labor contando con disponibilidad todos los días.\\xa0          Copyright © Dental Gomez                                              Con tecnología de                         -                      El #1 Comercio electrónico de código abierto                                                               window.addEventListener(\\'load\\', function () {                                           odoo.define(\\'im_livechat.livesupport\\', function (require) {                                  });                 });                                              '"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = soup.get_text().replace(\"\\n\", \" \")"
+    "text = soup.get_text().replace(\"\\n\", \" \")\n",
+    "text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +156,7 @@
        "[]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +195,7 @@
        "'es'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,9 +207,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nself.ID = ID                (SHA256, \"http://titulopagina.com\")\\nself.url = url              (http://titulopagina.com/mensajes/)\\nself.urls=urls           => LISTA DE URLS\\nself.social_networks=social_networks   => (urls) => (facebook, twitter, instagram, ....)\\n\\nself.language = language\\nself.text= text                         => soup.get_text() => Muy bien formateado el texto.\\nself.names = names          [juan pablo] => SPACY\\nself.locations=locations => SPACY (BUSCAR SI SPACY SACA DIRECCIONES!!!)\\n\\nself.coordinates = None  => BUSCAR COMO EXTRAER LAS COORDENADAS! (MAPA)\\nself.organizations=organizations => ORG.\\nself.dates=dates         => Spacy pueda reconocer dates?? BUSCAR URGENTE.\\n\\nself.numbers=numbers     => Numeros detectados (AGREGAR UN PATRÓN EN SPACY, +57300985249, 300-898-8849, +57-953-849-8498) \\n                            phonenumbers (https://pypi.org/project/phonenumbers/)\\nself.images=images       => JP ya sabe como descargar imágenes de una página. <img> => Determinar las carpetas: Deep Web, Google Normal, Desaparecidos Fiscalia.\\nself.payment_accounts=payment_accounts => PATRÓN EN SPACY BILLETERA CRIPTOMONEDAS.\\nself.emails=emails                     => Emails. Buscar cómo se hace en Spacy ó hacer un Patrón con el @ mailto:ventas@dentalgomez.co\\n'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "self.ID = ID                (SHA256, \"http://titulopagina.com\")\n",
@@ -235,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,16 +317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'                  Dental Gómez - Depósito Dental                       Contact   Meet us    305-827-0682   ventas@dentalgomez.co                           Inicio     Tienda     Soporte en vivo     Contáctenos                           Mi Carrito       Identificarse                   Nuestras   Promociones                                                     Agrega al carrito Agrega los productos que desees.            Datos de envío Indícanos dónde quieres recibir tu pedido.          Pago Múltiples facilidades de pago.            Recibe los Productos En tu consultorio, sin costo adicional.             Materiales Ofrecemos una amplia gama de materiales dentales.  Tienda         Instrumental Distribuimos instrumentales odontológicos para todas las especialidades.  Tienda         Equipos Contamos con una gran variedad de equipos dentales para todas las especialidades.  Contáctanos             Compra Online Gran variedad de productos desde la comodidad de tu consultorio, con\\xa0 grandes ofertas exclusivas.\\xa0        Recibe en tu Consultorio Contamos con una gran\\xa0 disponibilidad para nuestras entregas llevándolo puntualmente\\xa0 a tu consultorio sin ningún costo adicional,        Ahorra Tiempo Eliminamos\\xa0 la necesidad de trasladarse, al mejor costo y con una atención personalizada y detallada de nuestros productos.           Contáctanos               WhatsApp Chatea con nosotros.        Facebook Únete a nuestra comunidad.            Instagram Mantente al tanto de nuestras promociones.        Correo Contáctate con servicio al cliente.                                        Nuestros productos y Servicios   Inicio     Conéctate con nosotros   Contáctenos    305-827-0682    ventas@dentalgomez.co              Dental Gomez  - Sobre Nosotros  \\xa0Somos una empresa dedicada a la comercialización de materiales, equipos e instrumentos odontologicos, con los mas altos estándares de calidad a un buen\\xa0 costo.\\xa0 caracterizandonos por ser un equipo con una excelente calidad humana, comprometidos con nuestra labor contando con disponibilidad todos los días.\\xa0          Copyright © Dental Gomez                                              Con tecnología de                         -                      El #1 Comercio electrónico de código abierto           '"
+       "'                  Dental Gómez - Depósito Dental                       Contact   Meet us    305-827-0682   ventas@dentalgomez.co                           Inicio     Tienda     Soporte en vivo     Contáctenos                           Mi Carrito       Identificarse                   Nuestras   Promociones                                                     Agrega al carrito Agrega los productos que desees.            Datos de envío Indícanos dónde quieres recibir tu pedido.          Pago Múltiples facilidades de pago.            Recibe los Productos En tu consultorio, sin costo adicional.             Materiales Ofrecemos una amplia gama de materiales dentales.  Tienda         Instrumental Distribuimos instrumentales odontológicos para todas las especialidades.  Tienda         Equipos Contamos con una gran variedad de equipos dentales para todas las especialidades.  Contáctanos             Compra Online Gran variedad de productos desde la comodidad de tu consultorio, con\\xa0 grandes ofertas exclusivas.\\xa0        Recibe en tu Consultorio Contamos con una gran\\xa0 disponibilidad para nuestras entregas llevándolo puntualmente\\xa0 a tu consultorio sin ningún costo adicional,        Ahorra Tiempo Eliminamos\\xa0 la necesidad de trasladarse, al mejor costo y con una atención personalizada y detallada de nuestros productos.           Contáctanos               WhatsApp Chatea con nosotros.        Facebook Únete a nuestra comunidad.            Instagram Mantente al tanto de nuestras promociones.        Correo Contáctate con servicio al cliente.                                        Nuestros productos y Servicios   Inicio     Conéctate con nosotros   Contáctenos    305-827-0682    ventas@dentalgomez.co              Dental Gomez  - Sobre Nosotros  Somos una empresa dedicada a la comercialización de materiales, equipos e instrumentos odontologicos, con los mas altos estándares de calidad a un buen\\xa0 costo.\\xa0 caracterizandonos por ser un equipo con una excelente calidad humana, comprometidos con nuestra labor contando con disponibilidad todos los días.\\xa0          Copyright © Dental Gomez                                              Con tecnología de                         -                      El #1 Comercio electrónico de código abierto           '"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +349,7 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -586,13 +598,7 @@
       "            SPACE               \n",
       "ventas@dentalgomez.coADJ       amod      \n",
       "             SPACE               \n",
-      "Dental      PROPN     appos     \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Dental      PROPN     appos     \n",
       "Gomez       PROPN     appos     \n",
       "            SPACE               \n",
       "-           PUNCT     punct     \n",
@@ -797,7 +803,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
