--- a/WebScrapping_Laura.ipynb
+++ b/WebScrapping_Laura.ipynb
@@ -457,23 +457,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 275,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-275-d1cb4ff1c026>, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-275-d1cb4ff1c026>\"\u001b[1;36m, line \u001b[1;32m17\u001b[0m\n\u001b[1;33m    lista.append(re.findall(\"(\"+c+\")\", text), text))\u001b[0m\n\u001b[1;37m                                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def show_labels(text):\n",
+    "    localidades=[\"Usaquén\",\"Chapinero\",\"Santa Fe\",\"San Cristóbal\",\"Usme\",\"Tunjuelito\",\"Bosa\",\"Kennedy\",\"Fontibón\",\"Engativá\",\n",
+    "                 \"Suba\",\"Barrios Unidos\",\"Teusaquillo\",\"Los Mártires\",\"Antonio Nariño\",\"Puente Aranda\",\"La Candelaria\",\n",
+    "                 \"Rafael Uribe Uribe\",\"Ciudad Bolívar\",\"Sumapaz\"]\n",
+    "    cardinales=[\"Norte\",\"Sur\",\"Este\",\"Oeste\",\"Occidente\",\"Oriente\"]\n",
+    "    direccion=[\"Calle\",\"Avenida\", \"Carrera\",\"Diagonal\"]\n",
     "    doc = nlp(text)\n",
     "    list=[]\n",
     "    for ent in doc.ents:\n",
     "        print(ent.text, ent.label_)\n",
     "        list.append(ent)\n",
+    "    for l in localidades:\n",
+    "        if(len(re.findall(\"(\"+l+\")\", text))>0):\n",
+    "            lista.append(re.findall(\"(\"+l+\")\", text), text)\n",
+    "    for c in cardinales:\n",
+    "        if(len(re.findall(\"(\"+c+\")\", text))>0):\n",
+    "            lista.append(re.findall(\"(\"+c+\")\", text), text))\n",
+    "    for d in direccion:\n",
+    "        if(len(re.findall(\"(\"+d+\"[0-9]{2}\\s)\", text))>0):\n",
+    "            lista.append(re.findall(\"(\"+d+\"[0-9]{2}\\s)\", text), text)) \n",
     "    return list\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +588,7 @@
     }
    ],
    "source": [
-    "extracted_entities=show_labels(text)"
+    "a=extracted_entities=show_labels(text)"
    ]
   },
   {
