--- a/Node.ipynb
+++ b/Node.ipynb
@@ -6,14 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Node:\n",
+    "class Website:\n",
     "    \n",
     "    #--------------------------------------------------------------------------\n",
     "    # CONSTRUCTOR\n",
     "    #--------------------------------------------------------------------------\n",
-    "    \n",
-    "    def __init__(self, ID, url, language, names= [], locations = [], urls = [], numbers = [], coordinates = \"0,0\", images = [], dates = [], \n",
-    "                 payment_accounts= [], emails=[], organizations=[], text=\"\", social_networks=[]):\n",
+    "    self.destination_hash, # ID of the website.\n",
+    "                self.agent_destination, # URL of the website.\n",
+    "                urls,                  # URLS found on the website.\n",
+    "                social_networks_urls,  # Social networks urls.\n",
+    "                language,              # Language of the website.\n",
+    "                text,                  # Text of the website.\n",
+    "                names,                 # Names that appeared on the website.\n",
+    "                locations,             # Locations mentioned on website.\n",
+    "                coordinates,           # Coordinates of maps that appear on the website.\n",
+    "                organizations,         # Organization name's.\n",
+    "                dates,                 # Dates on the website.\n",
+    "                phonenumbers,          # Phonenumbers on the website.\n",
+    "                images_urls,           # Images urls.\n",
+    "                payment_accounts,      # Payment Accounts (banks, crytpo).\n",
+    "                emails                 # Emails on the website.\n",
+    "    def __init__(self, ID, url, urls = [], social_networks_urls=[], language, text=\"\", names= [], locations = [], coordinates = [],\n",
+    "                 organizations=[], dates = [], phonenumbers = [], images_urls = [],  payment_accounts= [], emails=[] ):\n",
     "\n",
     "        self.ID = ID # (SHA256, \"http://titulopagina.com\")\n",
     "        self.url = url\n",
@@ -21,16 +35,18 @@
     "        self.names =names\n",
     "        self.locations=locations\n",
     "        self.urls=urls\n",
-    "        self.numbers=numbers\n",
+    "        self.phonenumbers=phonenumbers\n",
     "        self.coordinates = cooordinates\n",
-    "        self.images=images\n",
+    "        self.images_urls=images_urls\n",
     "        self.dates=dates\n",
     "        self.payment_accounts=payment_accounts\n",
     "        self.emails=emails\n",
     "        self.organizations=organizations\n",
     "        self.text=text\n",
-    "        self.social_networks=social_networks\n",
-    "    \n",
+    "        self.social_networks_urls=social_networks_urls\n",
+    "    def info():\n",
+    "        print(\"ID: \"+self.ID)\n",
+    "        print(\"\")\n",
     "    #--------------------------------------------------------------------------\n",
     "    # METODOS\n",
     "    #--------------------------------------------------------------------------\n",
@@ -42,32 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = Node(849, \"eg\")"
+    "import networkx as nx\n",
+    "G = nx.Graph()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Node at 0x19b42fb55f8>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -170,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
