--- a/WebScrapping_Laura.ipynb
+++ b/WebScrapping_Laura.ipynb
@@ -180,13 +180,26 @@
    "source": [
     "# Use of entities labels from spacy to find locations\n",
     "def find_locations(text):\n",
+    "    localidades=[\"Usaquén\",\"Chapinero\",\"Santa Fe\",\"San Cristóbal\",\"Usme\",\"Tunjuelito\",\"Bosa\",\"Kennedy\",\"Fontibón\",\"Engativá\",\n",
+    "                 \"Suba\",\"Barrios Unidos\",\"Teusaquillo\",\"Los Mártires\",\"Antonio Nariño\",\"Puente Aranda\",\"La Candelaria\",\n",
+    "                 \"Rafael Uribe Uribe\",\"Ciudad Bolívar\",\"Sumapaz\"]\n",
+    "    cardinales=[\"Norte\",\"Sur\",\"Este\",\"Oeste\",\"Occidente\",\"Oriente\"]\n",
+    "    direccion=[\"Calle\",\"Avenida\", \"Carrera\",\"Diagonal\"]\n",
     "    doc = nlp(text)\n",
     "    list=[]\n",
     "    for ent in doc.ents:\n",
     "        if ent.label_==\"LOC\":\n",
     "            print(ent.text, ent.label_)\n",
     "            list.append(ent)\n",
-    "    \n",
+    "    for l in localidades:\n",
+    "        if(len(re.findall(\"(\"+l+\")\", text))>0):\n",
+    "            lista.append(re.findall(\"(\"+l+\")\", text), text)\n",
+    "    for c in cardinales:\n",
+    "        if(len(re.findall(\"(\"+c+\")\", text))>0):\n",
+    "            lista.append(re.findall(\"(\"+c+\")\", text), text))\n",
+    "    for d in direccion:\n",
+    "        if(len(re.findall(\"(\"+d+\"[0-9]{2}\\s)\", text))>0):\n",
+    "            lista.append(re.findall(\"(\"+d+\"[0-9]{2}\\s)\", text), text)) \n",
     "    return list"
    ]
   },
