Cambios get y set

--- a/Node.ipynb
+++ b/Node.ipynb
@@ -30,13 +30,112 @@
     "        self.organizations=organizations\n",
     "        self.text=text\n",
     "        self.social_networks=social_networks\n",
-    "    \n",
+    "        \n",
     "    #--------------------------------------------------------------------------\n",
     "    # METODOS\n",
     "    #--------------------------------------------------------------------------\n",
     "    \n",
     "    def __str__(self):\n",
-    "        return \"URL asociada es \" + self.url\n",
+    "        return \"The associated ID is: \" + self.ID\n",
+    "        \n",
+    "        \n",
+    "    #--------------------------------------------------------------------------\n",
+    "    # METODOS SET\n",
+    "    #--------------------------------------------------------------------------\n",
+    "    \n",
+    "    def setLanguage(self, newLanguage):\n",
+    "        self.language=newLanguage\n",
+    "        \n",
+    "    def setNames(self, newNames):\n",
+    "        self.names=newNames   \n",
+    "        \n",
+    "    def setLocations(self, newLocations):\n",
+    "        self.locations=newLocations\n",
+    "        \n",
+    "    def setUrls(self, newUrls):\n",
+    "        self.urls=newUrls\n",
+    "        \n",
+    "    def setNumbers(self, newNumbers):\n",
+    "        self.numbers=newNumbers\n",
+    "        \n",
+    "    def setCoordinates(self, newCoordinates):\n",
+    "        self.coordinates=newCoordinates\n",
+    "        \n",
+    "    def setImages(self, newImages):\n",
+    "        self.images=newImages\n",
+    "        \n",
+    "    def setDates(self, newDates):\n",
+    "        self.dates=newDates\n",
+    "        \n",
+    "    def setPaymentAccounts(self, newPaymentAccounts):\n",
+    "        self.payment_accounts=newPaymentAccounts\n",
+    "        \n",
+    "    def setEmails(self, newEmails):\n",
+    "        self.emails=newEmails\n",
+    "        \n",
+    "    def setOrganizations(self, newOrganizations):\n",
+    "        self.organizations=newOrganizations\n",
+    "        \n",
+    "    def setText(self, newText):\n",
+    "        self.text=newText\n",
+    "        \n",
+    "    def setSocialNetworks(self, newSocialNetworks):\n",
+    "        self.social_networks=newSocialNetworks\n",
+    "        \n",
+    "    \n",
+    "    #--------------------------------------------------------------------------\n",
+    "    # METODOS GET\n",
+    "    #--------------------------------------------------------------------------\n",
+    "    \n",
+    "    def getID(self):\n",
+    "        return self.ID\n",
+    "    \n",
+    "    def getUrl(self):\n",
+    "        return self.url\n",
+    "    \n",
+    "    def getLanguage(self):\n",
+    "        return self.language\n",
+    "    \n",
+    "    def getNames(self):\n",
+    "        return self.names\n",
+    "    \n",
+    "    def getLocations(self):\n",
+    "        return self.locations\n",
+    "    \n",
+    "    def getUrls(self):\n",
+    "        return self.urls\n",
+    "    \n",
+    "    def getNumbers(self):\n",
+    "        return self.numbers\n",
+    "    \n",
+    "    def getCoordinates(self):\n",
+    "        return self.coordinates\n",
+    "    \n",
+    "    def getImages(self):\n",
+    "        return self.images\n",
+    "    \n",
+    "    def getDates(self):\n",
+    "        return self.dates\n",
+    "    \n",
+    "    def getPaymentAccounts(self):\n",
+    "        return self.payment_accounts\n",
+    "    \n",
+    "    def getEmails(self):\n",
+    "        return self.emails\n",
+    "    \n",
+    "    def getOrganizations(self):\n",
+    "        return self.organizations\n",
+    "    \n",
+    "    def getText(self):\n",
+    "        return self.text\n",
+    "    \n",
+    "    def getSocialNetworks(self):\n",
+    "        return self.social_networks\n",
+    "    \n",
+    "  \n",
+    "\n",
+    "    \n",
+    "    \n",
     "    "
    ]
   },
@@ -170,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
